--- a/Movies/Cells/FavoriteCell/FavoriteCell.xib
+++ b/Movies/Cells/FavoriteCell/FavoriteCell.xib
@@ -1,21 +1,67 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="FavoriteCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="favoriteCell" rowHeight="115" id="KGk-i7-Jjw" customClass="FavoriteCell" customModule="Movies" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="441" height="115"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="441" height="115"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xji-j5-caL">
+                        <rect key="frame" x="10" y="5" width="100" height="100"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="100" id="0om-aN-N7H"/>
+                            <constraint firstAttribute="width" constant="100" id="ou2-VH-n9u"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="10"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                        </userDefinedRuntimeAttributes>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0cz-7B-HEc">
+                        <rect key="frame" x="130" y="10" width="291" height="24"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qml-7g-z3s">
+                        <rect key="frame" x="130" y="44" width="291" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="Qml-7g-z3s" firstAttribute="top" secondItem="0cz-7B-HEc" secondAttribute="bottom" constant="10" id="4Lk-Qx-7qv"/>
+                    <constraint firstItem="xji-j5-caL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="6yI-Kn-3BE"/>
+                    <constraint firstAttribute="trailing" secondItem="Qml-7g-z3s" secondAttribute="trailing" constant="20" id="8JA-60-hFV"/>
+                    <constraint firstAttribute="bottom" secondItem="Qml-7g-z3s" secondAttribute="bottom" constant="5" id="CCs-rv-49U"/>
+                    <constraint firstItem="xji-j5-caL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="Nmf-vS-4He"/>
+                    <constraint firstItem="Qml-7g-z3s" firstAttribute="leading" secondItem="xji-j5-caL" secondAttribute="trailing" constant="20" id="YEZ-B3-cAR"/>
+                    <constraint firstAttribute="bottom" secondItem="xji-j5-caL" secondAttribute="bottom" constant="5" id="fY9-gd-D54"/>
+                    <constraint firstAttribute="trailing" secondItem="0cz-7B-HEc" secondAttribute="trailing" constant="20" id="hbr-wS-YAH"/>
+                    <constraint firstItem="0cz-7B-HEc" firstAttribute="leading" secondItem="xji-j5-caL" secondAttribute="trailing" constant="20" id="zGh-fO-TTh"/>
+                    <constraint firstItem="0cz-7B-HEc" firstAttribute="top" secondItem="xji-j5-caL" secondAttribute="top" constant="5" id="zd4-I5-eIv"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="descriptionLabel" destination="Qml-7g-z3s" id="AyR-cc-RSc"/>
+                <outlet property="poster" destination="xji-j5-caL" id="e26-4V-l2Z"/>
+                <outlet property="titleLabel" destination="0cz-7B-HEc" id="p6d-5K-6GM"/>
+            </connections>
+            <point key="canvasLocation" x="10.869565217391305" y="2.34375"/>
         </tableViewCell>
     </objects>
 </document>
